--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.0.2
+  dynamic_theme: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,10 @@ flutter:
           - asset: assets/fonts/Montserrat-ExtraLight.otf
           - asset: assets/fonts/Montserrat-Regular.otf
           - asset: assets/fonts/Montserrat-Thin.otf
+
+      - family:  CustomIcons
+        fonts:
+          - asset: assets/icons/fonts/CustomIcons.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
