--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.0.2
   dynamic_theme: ^1.0.0
+  charts_flutter: ^0.5.0
+  flutter_sparkline: ^0.1.0
 
 dev_dependencies:
   flutter_test:
