--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   dynamic_theme: ^1.0.0
   charts_flutter: ^0.5.0
   flutter_sparkline: ^0.1.0
+  flutter_circular_chart: ^0.1.0
+  chartjs: ^0.5.0
+  badges: ^0.0.6
+
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +49,9 @@ flutter:
       - family: Raleway
         fonts:
           - asset: assets/fonts/Raleway-Regular.ttf
+      - family: Lulo
+        fonts:
+          - asset: assets/fonts/Lulo.otf
       - family: Montserrat
         fonts:
           - asset: assets/fonts/Montserrat-ExtraLight.otf
