--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_circular_chart: ^0.1.0
   chartjs: ^0.5.0
   badges: ^0.0.6
+  open_file: ^1.1.1
+  flutter_pdf_viewer: ^0.0.4
 
 
 dev_dependencies:
@@ -45,6 +47,7 @@ flutter:
   assets:
       - assets/images/
       - assets/icons/
+      - assets/files/
   fonts:
       - family: Raleway
         fonts:
