--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   get_ip: ^0.1.0
   simple_permissions: ^0.1.6
   flutter_app_badger: ^1.0.2
+  intro_views_flutter: ^2.4.0
+  http: ^0.12.0+1
 
   dio: any
 
