--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_app_badger: ^1.0.2
   intro_views_flutter: ^2.4.0
   http: ^0.12.0+1
+  flutter_local_notifications: any
 
   dio: any
 
